@@ -272,7 +272,12 @@ msg_town_set_nation_tax: '&b%s has set the nation tax at %s'
 msg_mayor_abandon: '&bYou would abandon your people? Choose another mayor with ''/town set mayor'' if your sure.'
 msg_new_day_tax: '&bA new day is here! Taxes and rent have been collected'
 msg_new_day: '&bA new day is here!'
-msg_new_king: '&b%s is now the king!'
+msg_new_king: '&b%s is now the king of %s!'
+msg_err_new_king_notmayor: '&cNew King is not a mayor.'
+msg_err_king_not_in_nation: '&cNew King doesn''t belong to this nation.'
+msg_err_fight_like_king: '&cNeutrality is not an option! Fight like a King!'
+msg_no_access_nation_bank: '&cYou don''t have access to the nation''s bank.'
+msg_err_no_money: '&cThere is not enough money in the bank.'
 msg_new_mayor: '&b%s is now the mayor!'
 msg_new_nation: '&b%s created a new nation called %s'
 msg_new_town: '&b%s created a new town called %s'
@@ -336,6 +341,7 @@ msg_err_universe_limit: '&cThe universe cannot hold any more towns.'
 msg_err_too_many_npc: '&cToo many npc''s registered.'
 msg_err_negative_money: '&cNegative money is stupid. Weirdo.'
 msg_err_not_percentage: '&cPercentages must be below 100.'
+msg_err_no_iconomy: '&ciConomy has not been turned on.'
 msg_not_allowed_join: '&c%s is not permitted to join a town.'
 
 # these messages are only used if town/nation creation is set to admins only
