@@ -376,3 +376,4 @@ v0.73.2:
     - Added permissions prefix and suffix node support. It now applies them to chat (group prefix, User Prefix, Towny prefix, playername, Towny suffix, Group Suffix, User Suffix).
     - Added saving of the Pitch and Yaw of town spawns.
     - Added a new permission node 'towny.cheat.bypass'. Disables the anti cheat code for those players with the node.
+    - If the capital of a nation is removed due to failure to pay upkeep the town with the highest resident count in that nation will become the Capital.
